--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.21.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.45.4",
+    "@vapi-ai/web": "^2.5.2",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.456.0",
     "next": "14.2.18",
